# repo-quality-reference

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  repo-quality.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: quality.yml
docs/: adoption.md  index.md  lifecycle.md  quality-gates.md  readme-and-agents.md  repository-shapes.md  standard.md
docs/adr/: 0001-self-auditing-reference.md  README.md
examples/doc-only/: repo-quality.toml
examples/python-single/: repo-quality.toml
examples/python-workspace/: repo-quality.toml
src/repo_quality/: __init__.py  __main__.py  checks.py  cli.py  config.py  docs.py  models.py
tests/: test_checks.py  test_cli.py  test_config.py  test_docs.py  test_examples.py
