[project]
name = "repo-quality-reference"
version = "0.1.0"
description = "Executable repository quality profiles for humans and coding agents."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Jacques Thomazo" },
]
dependencies = [
  "markdown>=3.10,<4",
  "markdown-it-py>=3.0.0,<5",
  "mdformat>=1.0.0,<2",
  "mkdocs>=1.6.1,<2",
  "pyyaml>=6.0.2,<7",
]

[project.scripts]
build-docs = "repo_quality.docs:build_main"
check-docs-format = "repo_quality.docs:format_main"
check-docs-links = "repo_quality.docs:links_main"
repo-quality = "repo_quality.cli:main"

[dependency-groups]
dev = [
  "detect-secrets>=1.5.0,<2",
  "pre-commit>=4.2.0,<5",
  "pre-commit-hooks>=6.0.0,<7",
  "pytest>=9.1.1,<10",
  "ruff>=0.15.22,<0.16",
  "ty>=0.0.1a16,<0.1",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "repo_quality"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "PT", "RUF", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ty.src]
include = ["src", "tests"]
